# python-behave-appium

./: .gitignore  Makefile  README.md  pavement.py  pyproject.toml
features/: environment.py  log.py
features/setup/devices/android/: capabilities.yml  common_capabilities.yml
features/setup/devices/ios/: capabilities.yml  common_capabilities.yml
features/specs/: example.feature  login.feature
features/steps/: A_steps.py  B_steps.py  C_steps.py  explore_screen_steps.py  main_screen_steps.py
